objects/Account_Record_Type__mdt.object
<CustomObject>
    <fields>
        <fullName>Minimum_Starting_Balance__c</fullName>
        <label>Minimum Starting Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Id__c</fullName>
        <label>Record Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Savings Minor Account</fullName>
                    <default>true</default>
                    <label>Savings Minor Account</label>
                </value>
                <value>
                    <fullName>Current Account</fullName>
                </value>
                <value>
                    <fullName>Savings Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Record Type</label>
    <pluralLabel>Account Record Types</pluralLabel>
</CustomObject>